After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779823 - crash while in week view, scrolling between dates
crash while in week view, scrolling between dates
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: User Interface
unspecified
Other Linux
: Normal normal
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-09 22:50 UTC by Diane Trout
Modified: 2017-03-10 11:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdb bt full (21.47 KB, text/x-log)
2017-03-09 22:50 UTC, Diane Trout
  Details
week-header: use a proper function to queue redraw (1.54 KB, patch)
2017-03-10 11:02 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Diane Trout 2017-03-09 22:50:20 UTC
Created attachment 347587 [details]
gdb bt full

I was scrolling around using the < > buttons at the top.
Comment 1 Diane Trout 2017-03-09 22:51:42 UTC
On Debian Testing:

reportbug list of packages installed

-- System Information:
Debian Release: 9.0
  APT prefers testing-debug
  APT policy: (500, 'testing-debug'), (500, 'testing'), (110, 'unstable')
Architecture: amd64 (x86_64)
Foreign Architectures: i386

Kernel: Linux 4.9.0-1-amd64 (SMP w/4 CPU cores)
Locale: LANG=en_US.UTF-8, LC_CTYPE=en_US.UTF-8 (charmap=UTF-8)
Shell: /bin/sh linked to /bin/dash
Init: systemd (via /run/systemd/system)

Versions of packages gnome-calendar depends on:
ii  dconf-gsettings-backend [gsettings-backend]  0.26.0-2+b1
ii  gsettings-desktop-schemas                    3.22.0-1
ii  libatk1.0-0                                  2.22.0-1
ii  libc6                                        2.24-9
ii  libcairo-gobject2                            1.14.8-1
ii  libcairo2                                    1.14.8-1
ii  libecal-1.2-19                               3.22.5-1
ii  libedataserver-1.2-22                        3.22.5-1
ii  libedataserverui-1.2-1                       3.22.5-1
ii  libgdk-pixbuf2.0-0                           2.36.5-2
ii  libglib2.0-0                                 2.50.3-1
ii  libgoa-1.0-0b                                3.22.4-1
ii  libgtk-3-0                                   3.22.8-1
ii  libical2                                     2.0.0-0.5+b1
ii  libicu57                                     57.1-5
ii  libpango-1.0-0                               1.40.3-3
ii  libpangocairo-1.0-0                          1.40.3-3
ii  libsecret-1-0                                0.18.5-2
ii  libsoup2.4-1                                 2.56.0-2
ii  libxml2                                      2.9.4+dfsg1-2.2

Versions of packages gnome-calendar recommends:
ii  evolution-data-server  3.22.5-1

gnome-calendar suggests no packages.

-- no debconf information
Comment 2 Georges Basile Stavracas Neto 2017-03-10 11:02:12 UTC
Created attachment 347614 [details] [review]
week-header: use a proper function to queue redraw

We were using gtk_widget_queue_draw() as a callback to
a GTimeoutSource, which expects a boolean return type.
This is clearly wrong, and has the chance to cause
a segmentation fault.

Fix that by passing a function with the apropriate signature.
Comment 3 Georges Basile Stavracas Neto 2017-03-10 11:03:29 UTC
Thanks for the report!

Attachment 347614 [details] pushed as 97698ad - week-header: use a proper function to queue redraw